kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipelinex-core-internal-service
  namespace: pipelinex-prod
  labels:
    app: pipelinex-core-service
spec:
  type: ClusterIP # Internal stable proxy IP mapping (keeps endpoint hidden from outside world)
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: pipelinex-core-pod # Routes traffic dynamically to the active pods tagged with this label
